# slurm-executor

./: README.md  pyproject.toml  rsync-exclude.txt
app/: app.py
examples/: write_to_standard_output.py
src/slurm_executor/: __init__.py
src/slurm_executor/broker/: __init__.py  broker.py
src/slurm_executor/executor/: CloudpickleExecutor.py  executor.py
src/slurm_executor/models/: SerializableCallData.py  __init__.py
src/slurm_executor/synchronizer/: RSyncSynchronizer.py
